@@ -1,5 +1,9 @@
 Version 0.5
 
+2004-03-29 Heinrich Wendel <h_wendel@cojobo.net>
+	* Finished Support for <Merge>, <Filename>, <Menuname>, <Separator>
+	  in Layout parsing in Menu.py
+
 2004-03-27 Heinrich Wendel <h_wendel@cojobo.net>
     * 5* speed improvement in Menu.py parsing code
 
